<resources>
    <string name="app_name">MovieTime</string>
    <string name="login_txt">Welcome to MovieTime!</string>
    <string name="password_placeholder">Password</string>
    <string name="username_placeholder">Username</string>
    <string name="login_button_txt">Login/Register</string>
    <string name="genres_header">Release Date</string>
    <string name="overview_header">Overview</string>
    <string name="duration_header">Average Score</string>
    <string name="language_header">Language</string>
    <string name="add_to_favs_button">Add to favourites!</string>
    <string name="title_header">Title</string>
    <string name="changeProfilePicButton">Change profile picture</string>
    <string name="password_profile">Sssh! It\'s a secret!</string>
    <string name="password_header_profile">Password</string>
    <string name="username_header_profile">Username</string>
    <string name="changePasswordButton">Change password</string>
    <string name="changePassword">Change your password</string>
    <string name="oldpassword_placeholder">Old password</string>
    <string name="newpassword_placeholder">New password</string>
    <string name="search_hint">Search movies...</string>
    <string name="action_search">Search movies...</string>
    <string name="relatedContentHeader">Releated content</string>
    <string name="trailerHeader">Trailer</string>

</resources>
